--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div>
           <h1 id="user-name">Dikhit Das</h1>
           <p id="bio">
-            I am a 7th Grader from India currently freelancing. CEO and Co-Founder at a company named <a href="https://spicydevs.js.org/">Spicydevs</a>
+            I am a 7th Grader from India currently freelancing. CEO and Co-Founder at <a href="https://spicydevs.js.org/">Spicydevs</a>
             <br />
             Mail me at:
             <a href="mailto:dikhitdas@outlook.com">dikhitdas@outlook.com</a>.
