--- a/index.html
+++ b/index.html
@@ -25,53 +25,25 @@
       name="description"
     />
     <meta
-      content="Dikhit is a devloper working at Spicydevs who is also known as fakedark, fakedarkdev and fake.dark.dev"
+      content="Dikhit is a devloper working at Spicydevs who is also known as fakedarkdev"
       property="og:description"
     />
     <meta content="Dikhit Das (fakedarkdev)" property="og:title" />
-    <meta
-      content="/avatar.jpeg"
-      property="og:image"
-    />
+    <meta content="/avatar.jpeg" property="og:image" />
     <meta content="https://fakedarkdev.github.io/" property="og:url" />
     <meta content="website" property="og:type" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="@fakedarkdev" name="twitter:creator" />
     <meta content="Dikhit Das (fakedarkdev)" name="twitter:title" />
-    <meta
-      content="/avatar.jpg"
-      name="twitter:image"
-    />
+    <meta content="/avatar.jpg" name="twitter:image" />
     <meta content="@fakedarkdev" name="twitter:site" />
     <meta
       content="Dikhit is a devloper working at Spicydevs who is also known as fakedark, fakedarkdev and fake.dark.dev"
       name="twitter:description"
     />
-    <link
-      href="/favicon.ico"
-      rel="icon"
-      type="image/x-icon"
-    />
+    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="https://fakedarkdev.github.io/" rel="canonical" />
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-LM2B0KC5LB"
-    ></script>
-    <script
-      type="text/javascript"
-      src="/button.js"
-    ></script>
-    <script>
-      !(function (e, t, a, n, g) {
-        (e[n] = e[n] || []),
-          e[n].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var m = t.getElementsByTagName(a)[0],
-          r = t.createElement(a);
-        (r.async = !0),
-          (r.src = "https://www.googletagmanager.com/gtm.js?id=GTM-PWK87LV"),
-          m.parentNode.insertBefore(r, m);
-      })(window, document, "script", "dataLayer");
-    </script>
+    <script type="text/javascript" src="/button.js"></script>
     <link rel="stylesheet" href="/style.css" />
   </head>
 
@@ -85,9 +57,16 @@
           title="Dikhit Das"
         />
         <div>
-          <h1 id="user-name">Dikhit Das</h1>
+          <h1 id="name">Dikhit Das</h1>
+          <div id="user-name">
+            <span>&#64;fakedarkdev</span>
+            <span>&#64;fake.dark.dev</span>
+          </div>
           <p id="bio">
-            I am a 7th Grader from India currently freelancing. CEO and Co-Founder at <a href="https://spicydevs.js.org/">Spicydevs</a>
+            I am a 7th Grader from India currently freelancing.
+            <br />
+            CEO and Co-Founder at
+            <a href="https://spicydevs.js.org/">Spicydevs</a>
             <br />
             Mail me at:
             <a href="mailto:dikhitdas@outlook.com">dikhitdas@outlook.com</a>.
@@ -111,8 +90,10 @@
       <section class="section--page">
         <h2>Skills & Qualifications</h2>
         <ul id="qualifications--list">
-          <li>✔️ >1 year experience in Web Development</li>
-          <li>✔️ Experience of contributing to open source</li>
+          <li>✔️ &lt;1 year experience in Web Development</li>
+          <li>✔️ Experience in using Linux</li>
+          <li>✔️ Experience in devloping Discord Bots</li>
+          <li>✔️ Experience of contributing to Open Source</li>
           <li>✔️ Knowledge of Git & GitHub</li>
         </ul>
       </section>
@@ -131,7 +112,25 @@
         <h2>Projects</h2>
         <div class="line-break"></div>
         <div class="card--work-history">
-          <strong>Currently working on Projects</strong>
+          <strong>Portfolio</strong>
+          <p>This Website</p>
+          <button
+            class="button"
+            onclick='window.open("https://fakedarkdev.js.cool","_blank")'
+          >
+            Visit <img src="/assets/newtab.svg" />
+          </button>
+          <button
+            class="button"
+            onclick='window.open("https://github.com/fakedarkdev/fakedarkdev.github.io","_blank")'
+          >
+            Source Code
+            <img src="/assets/newtab.svg" />
+          </button>
+        </div>
+        <div class="line-break"></div>
+        <div class="card--work-history">
+          <strong>Currently working on more Projects</strong>
         </div>
         <!-- <div class="line-break"></div>
         <div class="card--work-history">
@@ -149,8 +148,8 @@
           >
             Source Code
             <img src="/assets/newtab.svg" />
-          </button> -->
-        </div>
+          </button>
+        </div> -->
       </section>
       <div class="line-break"></div>
       <p align="center" style="font-size: 28px">
