--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2>Tech stack</h2>
         <div id="wrapper--techstack__items">
           <div class="card--techstack"><span>HTML, CSS</span></div>
-          <div class="card--techstack"><span>Bootstrap</span></div>
+          <div class="card--techstack"><span>Bootstrap & TailwindCSS</span></div>
           <div class="card--techstack"><span>Python</span></div>
           <div class="card--techstack"><span>Git & GitHub</span></div>
           <!-- <div class="card--techstack"><span>MongoDB</span></div> -->
