--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span>&#64;fake.dark.dev</span>
           </div>
           <p id="bio">
-            I am a 7th Grader from India currently freelancing.
+            I am an 8th Grader from India currently freelancing.
             <br />
             CEO and Co-Founder at
             <a href="https://spicydevs.js.org/">Spicydevs</a>
