--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
   </head>
 
   <body>
+    <section class="section--page" id="stars">
+      <div id="stars1"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </section>
     <div id="container--main">
       <section class="section--page" id="wrapper--hero">
         <img
