move icons to /assets/icons/

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
       <section class="section--page">
         <div id="socials--list">
           <a href="https://github.com/fakedarkdev" target="_blank"
-            ><img src="assets/github.svg" alt="GitHub" title="GitHub" /></a
+            ><img src="assets/icons/github.svg" alt="GitHub" title="GitHub" /></a
           ><a href="https://x.com/fakedarkdev" target=" _blank"
-            ><img src="assets/twitter.svg" alt="X" title="X" /></a
+            ><img src="assets/icons/twitter.svg" alt="X" title="X" /></a
           ><a href="https://www.instagram.com/fakedarkdev" target="_blank"
-            ><img src="assets/instagram.svg" alt="Instagram" title="Instagram"
+            ><img src="assets/icons/instagram.svg" alt="Instagram" title="Instagram"
           /></a>
           <a href="https://www.instagram.com/fake.dark.dev" target="_blank"
-            ><img src="assets/instagram.svg" alt="Instagram" title="Instagram"
+            ><img src="assets/icons/instagram.svg" alt="Instagram" title="Instagram"
           /></a>
         </div>
       </section>
@@ -125,14 +125,14 @@
             class="button"
             onclick='window.open("https://fakedarkdev.js.cool","_blank")'
           >
-            Visit <img src="/assets/newtab.svg" />
+            Visit <img src="/assets/icons/newtab.svg" />
           </button>
           <button
             class="button"
             onclick='window.open("https://github.com/fakedarkdev/fakedarkdev.github.io","_blank")'
           >
             Source Code
-            <img src="/assets/newtab.svg" />
+            <img src="/assets/icons/newtab.svg" />
           </button>
         </div>
         <div class="line-break"></div>
@@ -147,14 +147,14 @@
             class="button"
             onclick='window.open("LINK","_blank")'
           >
-            Visit <img src="/assets/newtab.svg" />
+            Visit <img src="/assets/icons/newtab.svg" />
           </button>
           <button
             class="button"
             onclick='window.open("https://github.com/fakedarkdev/project-name","_blank")'
           >
             Source Code
-            <img src="/assets/newtab.svg" />
+            <img src="/assets/icons/newtab.svg" />
           </button>
         </div> -->
       </section>
@@ -163,9 +163,9 @@
         Thanks for visiting<span style="font-size: 35px"> &lt;</span>3
       </p>
       <button id="go-top-btn">
-        <img src="/assets/up.svg" /></button
+        <img src="/assets/icons/up.svg" /></button
       ><button id="goBottom">
-        <img src="/assets/down.svg" />
+        <img src="/assets/icons/down.svg" />
       </button>
     </div>
     <script src="/script.js"></script>
