move favicon to /assets/icons/

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       content="Dikhit is a devloper working at Spicydevs who is also known as fakedark, fakedarkdev and fake.dark.dev"
       name="twitter:description"
     />
-    <link href="/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="assets/icons/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="https://fakedarkdev.github.io/" rel="canonical" />
     <script type="text/javascript" src="/button.js"></script>
     <link rel="stylesheet" href="/style.css" />
