move avatar to /assets/avatar.jpg

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       property="og:description"
     />
     <meta content="Dikhit Das (fakedarkdev)" property="og:title" />
-    <meta content="/avatar.jpeg" property="og:image" />
+    <meta content="assets/avatar.jpg" property="og:image" />
     <meta content="https://fakedarkdev.github.io/" property="og:url" />
     <meta content="website" property="og:type" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="@fakedarkdev" name="twitter:creator" />
     <meta content="Dikhit Das (fakedarkdev)" name="twitter:title" />
-    <meta content="/avatar.jpg" name="twitter:image" />
+    <meta content="assets/avatar.jpg" name="twitter:image" />
     <meta content="@fakedarkdev" name="twitter:site" />
     <meta
       content="Dikhit is a devloper working at Spicydevs who is also known as fakedark, fakedarkdev and fake.dark.dev"
@@ -56,7 +56,7 @@
     <div id="container--main">
       <section class="section--page" id="wrapper--hero">
         <img
-          src="/avatar.jpg"
+          src="assets/avatar.jpg"
           alt="Dikhit Das"
           id="profile-pic"
           title="Dikhit Das"
