update css js src

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     />
     <link href="assets/icons/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="https://fakedarkdev.github.io/" rel="canonical" />
-    <script type="text/javascript" src="/button.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <script type="text/javascript" src="assets/js/button.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body>
@@ -168,6 +168,6 @@
         <img src="/assets/icons/down.svg" />
       </button>
     </div>
-    <script src="/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
