--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             ><img src="assets/icons/github.svg" alt="GitHub" title="GitHub" /></a
           ><a href="https://x.com/fakedarkdev" target=" _blank"
             ><img src="assets/icons/twitter.svg" alt="X" title="X" /></a
-          ><a href="https://www.instagram.com/fakedarkdev" target="_blank"
-            ><img src="assets/icons/instagram.svg" alt="Instagram" title="Instagram"
+          ><a href="https://spicydevs.js.org/discord" target="_blank"
+            ><img src="assets/icons/discord.svg" alt="Discord" title="Discord"
           /></a>
-          <a href="https://www.instagram.com/fake.dark.dev" target="_blank"
-            ><img src="assets/icons/instagram.svg" alt="Instagram" title="Instagram"
+          <a href="./links"
+            ><img src="assets/icons/ellipsis-solid.svg" alt="More Links" title="More Links"
           /></a>
         </div>
       </section>
