change checkmark before qualifications and use css for the checkmark before li

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
       <section class="section--page">
         <h2>Skills & Qualifications</h2>
         <ul id="qualifications--list">
-          <li>✔️ &lt;1 year experience in Web Development</li>
-          <li>✔️ Experience in using Linux</li>
-          <li>✔️ Experience in devloping Discord Bots</li>
-          <li>✔️ Experience of contributing to Open Source</li>
-          <li>✔️ Knowledge of Git & GitHub</li>
+          <li>&lt;1 year experience in Web Development</li>
+          <li>Experience in using Linux</li>
+          <li>Experience in devloping Discord Bots</li>
+          <li>Experience of contributing to Open Source</li>
+          <li>Knowledge of Git & GitHub</li>
         </ul>
       </section>
       <section class="section--page">
