--- a/index.html
+++ b/index.html
@@ -81,14 +81,20 @@
       <section class="section--page">
         <div id="socials--list">
           <a href="https://github.com/fakedarkdev" target="_blank"
-            ><img src="assets/icons/github.svg" alt="GitHub" title="GitHub" /></a
+            ><img
+              src="assets/icons/github.svg"
+              alt="GitHub"
+              title="GitHub" /></a
           ><a href="https://x.com/fakedarkdev" target=" _blank"
             ><img src="assets/icons/twitter.svg" alt="X" title="X" /></a
           ><a href="https://spicydevs.js.org/discord" target="_blank"
             ><img src="assets/icons/discord.svg" alt="Discord" title="Discord"
           /></a>
           <a href="./links"
-            ><img src="assets/icons/ellipsis-solid.svg" alt="More Links" title="More Links"
+            ><img
+              src="assets/icons/ellipsis-solid.svg"
+              alt="More Links"
+              title="More Links"
           /></a>
         </div>
       </section>
