--- a/links.html
+++ b/links.html
@@ -54,8 +54,9 @@
       }
       h2 {
         text-align: center;
-        margin: 0 50%;
-        display: inline-block;
+        /* margin: 0 50%; */
+        /* display: inline-block; */
+        align-items: center;
         font-size: 2em;
       }
       img {
