made more responsive for smaller devices

--- a/links.html
+++ b/links.html
@@ -69,6 +69,13 @@
         font-size: 1.5em;
         vertical-align: middle;
       }
+      @media screen and (max-width: 450px) {
+        #container--main {
+          max-width: 100%;
+          margin: 0 0;
+          padding: 0;
+        }
+      }
     </style>
   </head>
   <body>
