fix telegram and replit descriptions

--- a/links.html
+++ b/links.html
@@ -173,7 +173,7 @@
           <img src="assets/icons/telegram.svg" alt="" /><strong
             >Telegram</strong
           >
-          <p>My Twitter</p>
+          <p>My Telegram</p>
         </div>
         <div class="line-break"></div>
         <div class="card--link--container">
@@ -184,7 +184,7 @@
             Visit <img src="assets/icons/newtab.svg" />
           </button>
           <img src="assets/icons/replit.svg" alt="" /><strong>Replit</strong>
-          <p>My Twitter</p>
+          <p>My Replit</p>
         </div>
         <div class="line-break"></div>
         <div class="card--link--container">
