--- a/links.html
+++ b/links.html
@@ -139,12 +139,12 @@
         <div class="card--link--container">
           <button
             class="button"
-            onclick='window.open("https://instagram.com/fake.dark.exe","_blank")'
+            onclick='window.open("https://instagram.com/iblamedikhit","_blank")'
           >
             Visit <img src="assets/icons/newtab.svg" />
           </button>
           <img src="assets/icons/instagram.svg" alt="" /><strong
-            >Instagram - @fake.dark.exe</strong
+            >Instagram - @iblamedikhit</strong
           >
           <p>My Instagram</p>
         </div>
