--- a/index.html
+++ b/index.html
@@ -100,24 +100,25 @@
       <section class="section--page">
         <h2>Skills & Qualifications</h2>
         <ul id="qualifications--list">
-          <li>&lt;1 year experience in Web Development</li>
+          <li>&gt;1 year experience in Web Development</li>
           <li>Experience in using Linux</li>
           <li>Experience in devloping Discord Bots</li>
           <li>Experience of contributing to Open Source</li>
           <li>Knowledge of Git & GitHub</li>
+          <li>I use arch btw!</li>
         </ul>
       </section>
       <section class="section--page">
         <h2>Tech stack</h2>
         <div id="wrapper--techstack__items">
-          <div class="card--techstack"><span>HTML, CSS</span></div>
+          <div class="card--techstack"><span>HTML, CSS, JS</span></div>
           <div class="card--techstack">
             <span>Bootstrap & TailwindCSS</span>
           </div>
-          <div class="card--techstack"><span>Python</span></div>
+          <div class="card--techstack"><span>NodeJS, Python, Lua, Bash</span></div>
           <div class="card--techstack"><span>Git & GitHub</span></div>
           <!-- <div class="card--techstack"><span>MongoDB</span></div> -->
-          <div class="card--techstack"><span>Linux, Ubuntu</span></div>
+          <div class="card--techstack"><span>Linux</span></div>
         </div>
       </section>
       <section class="section--page" id="work-history-wrapper">
