--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <span>&#64;fake.dark.dev</span>
           </div>
           <p id="bio">
-            I am a 9th Grader from India currently freelancing.
+            9th Grader from India currently freelancing.
             <br />
             CEO and Co-Founder at
             <a href="https://spicydevs.js.org/">Spicydevs</a>
@@ -103,7 +103,7 @@
           <li>&gt;1 year experience in Web Development</li>
           <li>Experience in using Linux</li>
           <li>Experience in devloping Discord Bots</li>
-          <li>Experience of contributing to Open Source</li>
+          <li>Open Source Contributor</li>
           <li>Knowledge of Git & GitHub</li>
         </ul>
       </section>
@@ -114,7 +114,9 @@
           <div class="card--techstack">
             <span>Bootstrap & TailwindCSS</span>
           </div>
-          <div class="card--techstack"><span>NodeJS, Python, Lua, Bash</span></div>
+          <div class="card--techstack">
+            <span>NodeJS, Python, Lua, Bash</span>
+          </div>
           <div class="card--techstack"><span>Git & GitHub</span></div>
           <!-- <div class="card--techstack"><span>MongoDB</span></div> -->
           <div class="card--techstack"><span>Linux</span></div>
