update pfp, change dimensions and add box shadow

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="container--main">
       <section class="section--page" id="wrapper--hero">
         <img
-          src="assets/avatar.jpg"
+          src="assets/avatar.png"
           alt="Dikhit Das"
           id="profile-pic"
           title="Dikhit Das"
