--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width,height=device-height,initial-scale=1,shrink-to-fit=yes"
       name="viewport"
     />
-    <meta content="#ff8000" name="theme-color" />
+    <meta content="#000f19" name="theme-color" />
     <meta
       content="black-translucent"
       name="apple-mobile-web-app-status-bar-style"
