--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
     />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="" name="apple-mobile-web-app-status-bar-style" />
-    <title>Dikhit Das &#40;fakedarkdev&#41;</title>
+    <title>Dikhit Das &#40;ikrdikhit&#41;</title>
     <meta
-      content="FakeDark, fakedarkdev, SpicyDevs, fake.dark.exe, fake.dark.dev, @fakedarkdev, Dikhit Das, Dikhit"
+      content="Dikhit, ikrdikhit, SpicyDevs, @ikrdikhit, Dikhit Das, Dikhit"
       name="keywords"
     />
-    <meta content="Dikhit Das (fakedarkdev, fake.dark.dev)" name="author" />
+    <meta content="Dikhit Das (ikrdikhit)" name="author" />
     <meta
-      content="Dikhit is a devloper working at Spicydevs who is also known as fakedark, fakedarkdev and fake.dark.dev"
+      content="Dikhit is a devloper working at Spicydevs who is also known as ikrdikhit and was previously known with the aliases fakedark, fakedarkdev and fake.dark.dev"
       name="description"
     />
     <meta
-      content="Dikhit is a devloper working at Spicydevs who is also known as fakedarkdev"
+      content="Dikhit is a devloper working at Spicydevs who is also known as ikrdikhit and was previously known with the aliases fakedark, fakedarkdev and fake.dark.dev"
       property="og:description"
     />
-    <meta content="Dikhit Das (fakedarkdev)" property="og:title" />
+    <meta content="Dikhit Das (ikrdikhit)" property="og:title" />
     <meta content="assets/avatar.jpg" property="og:image" />
     <meta content="https://fakedarkdev.github.io/" property="og:url" />
     <meta content="website" property="og:type" />
     <meta content="summary_large_image" name="twitter:card" />
-    <meta content="@fakedarkdev" name="twitter:creator" />
-    <meta content="Dikhit Das (fakedarkdev)" name="twitter:title" />
+    <meta content="@ikrdikhit" name="twitter:creator" />
+    <meta content="Dikhit Das (ikrdikhit)" name="twitter:title" />
     <meta content="assets/avatar.jpg" name="twitter:image" />
-    <meta content="@fakedarkdev" name="twitter:site" />
+    <meta content="@ikrdikhit" name="twitter:site" />
     <meta
-      content="Dikhit is a devloper working at Spicydevs who is also known as fakedark, fakedarkdev and fake.dark.dev"
+      content="Dikhit is a devloper working at Spicydevs who is also known as ikrdikhit and was previously known with the aliases fakedark, fakedarkdev and fake.dark.dev"
       name="twitter:description"
     />
     <link href="assets/icons/favicon.ico" rel="icon" type="image/x-icon" />
-    <link href="https://fakedarkdev.github.io/" rel="canonical" />
+    <link href="https://ikrdikhit.github.io/" rel="canonical" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
@@ -63,8 +63,9 @@
         <div>
           <h1 id="name">Dikhit Das</h1>
           <div id="user-name">
-            <span>&#64;fakedarkdev</span>
-            <span>&#64;fake.dark.dev</span>
+            <span>&#64;ikrdikhit</span>
+            <!-- <span>&#64;fakedarkdev</span> -->
+            <!-- <span>&#64;fake.dark.dev</span> -->
           </div>
           <p id="bio">
             9th Grader from India currently freelancing.
@@ -79,12 +80,12 @@
       </section>
       <section class="section--page">
         <div id="socials--list">
-          <a href="https://github.com/fakedarkdev" target="_blank"
+          <a href="https://github.com/ikrdikhit" target="_blank"
             ><img
               src="assets/icons/github.svg"
               alt="GitHub"
               title="GitHub" /></a
-          ><a href="https://x.com/fakedarkdev" target=" _blank"
+          ><a href="https://x.com/ikrdikhit" target=" _blank"
             ><img src="assets/icons/twitter.svg" alt="X" title="X" /></a
           ><a href="https://spicydevs.js.org/discord" target="_blank"
             ><img src="assets/icons/discord.svg" alt="Discord" title="Discord"
@@ -130,13 +131,13 @@
           <p>This Website</p>
           <button
             class="button"
-            onclick='window.open("https://fakedarkdev.js.cool","_blank")'
+            onclick='window.open("#")'
           >
             Visit <img src="/assets/icons/newtab.svg" />
           </button>
           <button
             class="button"
-            onclick='window.open("https://github.com/fakedarkdev/fakedarkdev.github.io","_blank")'
+            onclick='window.open("https://github.com/ikrdikhit/ikrdikhit.github.io","_blank")'
           >
             Source Code
             <img src="/assets/icons/newtab.svg" />
@@ -158,7 +159,7 @@
           </button>
           <button
             class="button"
-            onclick='window.open("https://github.com/fakedarkdev/project-name","_blank")'
+            onclick='window.open("https://github.com/ikrdikhit/project-name","_blank")'
           >
             Source Code
             <img src="/assets/icons/newtab.svg" />
