--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -68,7 +68,7 @@
             <!-- <span>&#64;fake.dark.dev</span> -->
           </div>
           <p id="bio">
-            9th Grader from India currently freelancing.
+            Teen from India currently freelancing.
             <br />
             CEO and Co-Founder at
             <a href="https://spicydevs.js.org/">Spicydevs</a>
@@ -129,10 +129,7 @@
         <div class="card--work-history">
           <strong>Portfolio</strong>
           <p>This Website</p>
-          <button
-            class="button"
-            onclick='window.open("#")'
-          >
+          <button class="button" onclick='window.open("#")'>
             Visit <img src="/assets/icons/newtab.svg" />
           </button>
           <button
