--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <!-- Immediate redirect -->
     <meta
       http-equiv="refresh"
-      content="0; url=https://ikrdikhit-github-io.pages.dev/"
+      content="0; url=https://ikrdikhit.is-a.dev/"
     />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://ikrdikhit-github-io.pages.dev/" />
+    <link rel="canonical" href="https://ikrdikhit.is-a.dev/" />
 
     <!-- JS fallback -->
     <script>
-      window.location.replace("https://ikrdikhit-github-io.pages.dev/");
+      window.location.replace("https://ikrdikhit.is-a.dev/");
     </script>
   </head>
   <body>
     <p>Redirecting to the new site…</p>
     <p>
       If not redirected,
-      <a href="https://ikrdikhit-github-io.pages.dev">click here</a>.
+      <a href="https://ikrdikhit.is-a.dev">click here</a>.
     </p>
   </body>
 </html>
